<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    android:gravity="center|bottom"
    android:orientation="vertical" >

    <com.google.android.gms.ads.AdView android:id="@+id/adView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         ads:adUnitId="ca-app-pub-4116840717941176/4392976445"
                         ads:adSize="BANNER"/>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center|center_vertical"
        android:layout_weight="1"
        android:background="@drawable/maincabecera"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        android:typeface="normal" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/fondo9"
        android:onClick="onUnoClick"
        android:scaleType="fitCenter"
        android:text="@string/Comenzar" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@drawable/fondo9"
        android:onClick="onDosClick"
        android:scaleType="fitCenter"
        android:text="@string/Jugar" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/fondo9"
        android:onClick="onAboutClick"
        android:scaleType="fitCenter"
        android:text="@string/Creditos" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/fondo9"
        android:onClick="onExitClick"
        android:scaleType="fitCenter"
        android:text="@string/Salir" />

</LinearLayout>